--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -1,6 +1,6 @@
 {
   "auth": {
-    "customauth77a69a33": {
+    "customauth6f3ffc5c": {
       "service": "Cognito",
       "providerPlugin": "awscloudformation",
       "dependsOn": [],
